// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UuJokesCore.Joke.DetailView.AreaView default props 1`] = `
<UuJokesCore.Joke.DetailView.AreaView
  awscDataObject={
    Object {
      "data": Object {
        "data": Object {
          "artifact": Object {
            "uuAppWorkspaceUri": "",
          },
        },
      },
      "state": "ready",
    }
  }
  jokeDataObject={
    Object {
      "data": Object {
        "averageRating": 2.5,
        "categoryIdList": Array [
          "1",
          "2",
        ],
        "id": "123",
        "image": "1234",
        "imageUrl": "https://via.placeholder.com/300x300",
        "name": "Test joke",
        "ratingCount": 5,
        "sys": Object {
          "cts": "2020-01-01T00:00:00.000Z",
        },
        "text": "Best joke ever",
        "visibility": false,
      },
      "state": "ready",
    }
  }
  jokesDataObject={
    Object {
      "data": Object {
        "categoryList": Array [
          Object {
            "id": "1",
            "name": "Category 1",
          },
          Object {
            "id": "2",
            "name": "Category 2",
          },
          Object {
            "id": "3",
            "name": "Category 3",
          },
        ],
      },
      "state": "ready",
    }
  }
  jokesPermission={
    Object {
      "joke": Object {
        "canAddRating": [Function],
        "canManage": [Function],
      },
    }
  }
  preferenceDataObject={
    Object {
      "data": Object {
        "disableUserPreference": false,
        "showAuthor": true,
        "showCategories": true,
        "showCreationTime": true,
      },
      "state": "ready",
    }
  }
>
  <Plus4U5Elements.IdentificationBlock
    actionList={Array []}
    header={
      <UuJokesCore.Joke.DetailView.Header
        hideTypeName={false}
        joke={
          Object {
            "averageRating": 2.5,
            "categoryIdList": Array [
              "1",
              "2",
            ],
            "id": "123",
            "image": "1234",
            "imageUrl": "https://via.placeholder.com/300x300",
            "name": "Test joke",
            "ratingCount": 5,
            "sys": Object {
              "cts": "2020-01-01T00:00:00.000Z",
            },
            "text": "Best joke ever",
            "visibility": false,
          }
        }
      />
    }
    headerSeparator={true}
  >
    <Uu5Elements.Block
      actionList={Array []}
      card="full"
      collapsible={false}
      header={
        <React.Fragment>
          <Plus4U5Elements.IdentificationIcon
            className="plusuelements-12z0wuy"
            size="xxs"
          />
          <UuJokesCore.Joke.DetailView.Header
            hideTypeName={false}
            joke={
              Object {
                "averageRating": 2.5,
                "categoryIdList": Array [
                  "1",
                  "2",
                ],
                "id": "123",
                "image": "1234",
                "imageUrl": "https://via.placeholder.com/300x300",
                "name": "Test joke",
                "ratingCount": 5,
                "sys": Object {
                  "cts": "2020-01-01T00:00:00.000Z",
                },
                "text": "Best joke ever",
                "visibility": false,
              }
            }
          />
        </React.Fragment>
      }
      headerSeparator={true}
      headerType="title"
    >
      <Uu5Elements.TitleBlock
        actionList={Array []}
        card="full"
        collapsible={false}
        header={
          <React.Fragment>
            <Plus4U5Elements.IdentificationIcon
              className="plusuelements-12z0wuy"
              size="xxs"
            />
            <UuJokesCore.Joke.DetailView.Header
              hideTypeName={false}
              joke={
                Object {
                  "averageRating": 2.5,
                  "categoryIdList": Array [
                    "1",
                    "2",
                  ],
                  "id": "123",
                  "image": "1234",
                  "imageUrl": "https://via.placeholder.com/300x300",
                  "name": "Test joke",
                  "ratingCount": 5,
                  "sys": Object {
                    "cts": "2020-01-01T00:00:00.000Z",
                  },
                  "text": "Best joke ever",
                  "visibility": false,
                }
              }
            />
          </React.Fragment>
        }
        headerSeparator={true}
      >
        <Uu5Elements.BlockView
          actionList={Array []}
          card="full"
          header={
            <Uu5Elements.withTooltip(Uu5Elements.Text)
              category="interface"
              segment="title"
              significance="common"
              type="common"
            >
              <React.Fragment>
                <Plus4U5Elements.IdentificationIcon
                  className="plusuelements-12z0wuy"
                  size="xxs"
                />
                <UuJokesCore.Joke.DetailView.Header
                  hideTypeName={false}
                  joke={
                    Object {
                      "averageRating": 2.5,
                      "categoryIdList": Array [
                        "1",
                        "2",
                      ],
                      "id": "123",
                      "image": "1234",
                      "imageUrl": "https://via.placeholder.com/300x300",
                      "name": "Test joke",
                      "ratingCount": 5,
                      "sys": Object {
                        "cts": "2020-01-01T00:00:00.000Z",
                      },
                      "text": "Best joke ever",
                      "visibility": false,
                    }
                  }
                />
              </React.Fragment>
            </Uu5Elements.withTooltip(Uu5Elements.Text)>
          }
          headerSeparator={true}
        >
          <Uu5Elements.Box
            borderRadius="moderate"
          >
            <Uu5g05.BackgroundProvider
              background="light"
            >
              <div
                className="uuelements-10i8t5n"
              >
                <Uu5Elements.Header
                  actionList={Array []}
                  separator={true}
                >
                  <Uu5Elements.Bar
                    actionList={Array []}
                    className="uuelements-bdxw0n"
                    paddingHorizontal={true}
                    paddingVertical={true}
                    separator={true}
                  >
                    <div
                      className="uuelements-bdxw0n"
                    >
                      <Uu5Elements.withTooltip(Uu5Elements.Text)
                        category="interface"
                        segment="title"
                        type="common"
                      >
                        <Uu5Elements.Text
                          category="interface"
                          segment="title"
                          type="common"
                        >
                          <span
                            className="uuelements-1prlaii uuelements-0"
                          >
                            <Plus4U5Elements.IdentificationIcon
                              className="plusuelements-12z0wuy"
                              size="xxs"
                            />
                            <UuJokesCore.Joke.DetailView.Header
                              joke={
                                Object {
                                  "averageRating": 2.5,
                                  "categoryIdList": Array [
                                    "1",
                                    "2",
                                  ],
                                  "id": "123",
                                  "image": "1234",
                                  "imageUrl": "https://via.placeholder.com/300x300",
                                  "name": "Test joke",
                                  "ratingCount": 5,
                                  "sys": Object {
                                    "cts": "2020-01-01T00:00:00.000Z",
                                  },
                                  "text": "Best joke ever",
                                  "visibility": false,
                                }
                              }
                            >
                              <Uu5Elements.withTooltip(Uu5Elements.Text)>
                                <Uu5Elements.Text>
                                  <span
                                    className="uuelements-0 uuelements-0"
                                  >
                                    <Uu5Elements.withTooltip(Uu5Elements.Text)
                                      colorScheme="building"
                                      significance="subdued"
                                    >
                                      <Uu5Elements.Text
                                        colorScheme="building"
                                        significance="subdued"
                                      >
                                        <span
                                          className="uuelements-0 uuelements-15k0dco"
                                        >
                                          <Uu5Elements.withTooltip(Uu5Elements.Icon)
                                            className="uujokescore-joke-detailview-12z0wuy"
                                            icon="mdi-eye-off"
                                          >
                                            <Uu5Elements.Icon
                                              className="uujokescore-joke-detailview-12z0wuy"
                                              icon="mdi-eye-off"
                                            >
                                              <span
                                                className="uuelements-4g9xqe mdi mdi-eye-off uujokescore-joke-detailview-12z0wuy"
                                              />
                                            </Uu5Elements.Icon>
                                          </Uu5Elements.withTooltip(Uu5Elements.Icon)>
                                        </span>
                                      </Uu5Elements.Text>
                                    </Uu5Elements.withTooltip(Uu5Elements.Text)>
                                    Joke
                                     - 
                                    Test joke
                                  </span>
                                </Uu5Elements.Text>
                              </Uu5Elements.withTooltip(Uu5Elements.Text)>
                            </UuJokesCore.Joke.DetailView.Header>
                          </span>
                        </Uu5Elements.Text>
                      </Uu5Elements.withTooltip(Uu5Elements.Text)>
                    </div>
                  </Uu5Elements.Bar>
                </Uu5Elements.Header>
                <Uu5Elements.Body
                  className="uuelements-1cqsrz9"
                  contentClassName="uuelements-1bwdv7e"
                  displayInfo={false}
                  footerSeparator={false}
                  paddingHorizontal={true}
                  paddingTop={true}
                  scrollIndicator={
                    Object {
                      "bottom": "disappear",
                      "top": "gradient",
                    }
                  }
                >
                  <Uu5Elements.CollapsibleBox
                    className="uuelements-1cqsrz9"
                    disabled={false}
                  >
                    <div
                      className="uuelements-7s9z5s uuelements-1cqsrz9"
                      disabled={false}
                      style={Object {}}
                    >
                      <Content
                        className="uuelements-1lytpdc uuelements-1bwdv7e"
                        scrollIndicator={
                          Object {
                            "bottom": "disappear",
                            "top": "gradient",
                          }
                        }
                        scrollable={true}
                      >
                        <div
                          className="uuelements-1lytpdc uuelements-1bwdv7e uuelements-0"
                        >
                          <UuJokesCore.Core.DataObjectStateResolver
                            dataObject={
                              Object {
                                "data": Object {
                                  "categoryList": Array [
                                    Object {
                                      "id": "1",
                                      "name": "Category 1",
                                    },
                                    Object {
                                      "id": "2",
                                      "name": "Category 2",
                                    },
                                    Object {
                                      "id": "3",
                                      "name": "Category 3",
                                    },
                                  ],
                                },
                                "state": "ready",
                              }
                            }
                            height="500px"
                          >
                            <UuJokesCore.Core.DataObjectStateResolver
                              customErrorLsi={
                                Object {
                                  "uu-jokes-main/joke/addRating/userNotAuthorized": "The author is not allowed to rate own jokes",
                                  "uu-jokes-main/joke/create/invalidImage": "The image file is not valid or supported image type",
                                  "uu-jokes-main/joke/get/jokeDoesNotExist": "The joke does not exist",
                                  "uu-jokes-main/joke/update/invalidImage": "The image file is not valid or supported image type",
                                  "uujokescore-joke-provider/no-oid": "The oid property is missing",
                                }
                              }
                              dataObject={
                                Object {
                                  "data": Object {
                                    "averageRating": 2.5,
                                    "categoryIdList": Array [
                                      "1",
                                      "2",
                                    ],
                                    "id": "123",
                                    "image": "1234",
                                    "imageUrl": "https://via.placeholder.com/300x300",
                                    "name": "Test joke",
                                    "ratingCount": 5,
                                    "sys": Object {
                                      "cts": "2020-01-01T00:00:00.000Z",
                                    },
                                    "text": "Best joke ever",
                                    "visibility": false,
                                  },
                                  "state": "ready",
                                }
                              }
                              height="500px"
                            >
                              <UuJokesCore.Core.DataObjectStateResolver
                                customErrorLsi={
                                  Object {
                                    "uu-jokes-main/joke/addRating/userNotAuthorized": "The author is not allowed to rate own jokes",
                                    "uu-jokes-main/joke/create/invalidImage": "The image file is not valid or supported image type",
                                    "uu-jokes-main/joke/get/jokeDoesNotExist": "The joke does not exist",
                                    "uu-jokes-main/joke/update/invalidImage": "The image file is not valid or supported image type",
                                    "uujokescore-joke-provider/no-oid": "The oid property is missing",
                                  }
                                }
                                dataObject={
                                  Object {
                                    "data": Object {
                                      "disableUserPreference": false,
                                      "showAuthor": true,
                                      "showCategories": true,
                                      "showCreationTime": true,
                                    },
                                    "state": "ready",
                                  }
                                }
                                height="500px"
                              >
                                <UuJokesCore.Jokes.ContextBar
                                  awsc={
                                    Object {
                                      "data": Object {
                                        "artifact": Object {
                                          "uuAppWorkspaceUri": "",
                                        },
                                      },
                                    }
                                  }
                                  jokes={
                                    Object {
                                      "categoryList": Array [
                                        Object {
                                          "id": "1",
                                          "name": "Category 1",
                                        },
                                        Object {
                                          "id": "2",
                                          "name": "Category 2",
                                        },
                                        Object {
                                          "id": "3",
                                          "name": "Category 3",
                                        },
                                      ],
                                    }
                                  }
                                >
                                  <UuP.Bricks.ContextBar
                                    additionalInfo={
                                      Array [
                                        Object {
                                          "content": <div>
                                            <Uu5Elements.withTooltip(Uu5Elements.Icon)
                                              icon="uubml-territory-uu"
                                              significance="common"
                                              size="l"
                                            />
                                          </div>,
                                          "label": "Territory",
                                        },
                                      ]
                                    }
                                    defaultView="hideDesc"
                                    desc="TODO Description"
                                    header={
                                      <UuTerritory.Bricks.ArtifactLink
                                        artifactCode=""
                                        artifactData={null}
                                        artifactId=""
                                        artifactName=""
                                        artifactStateIcon="uubml-state-s00-undefined"
                                        artifactStateName=""
                                        bgStyle={null}
                                        borderRadius={null}
                                        className={null}
                                        colorSchema="primary"
                                        contextMenuMap={null}
                                        controlled={true}
                                        disable={false}
                                        disabled={false}
                                        elevation={null}
                                        hidden={false}
                                        hideIcon={false}
                                        hideStateIcon={false}
                                        href=""
                                        icon="uubml-uuawsc"
                                        id={null}
                                        leftBottomIcon={null}
                                        mainAttrs={null}
                                        mainUuIdentity={null}
                                        mtMainBaseUri={null}
                                        name={null}
                                        nestingLevel={null}
                                        onClick={null}
                                        onCtrlClick={null}
                                        openInNewTab={false}
                                        params={Object {}}
                                        parent={null}
                                        ref_={null}
                                        selected={false}
                                        stateIconStyle="basic"
                                        style={null}
                                        territoryBaseUri={null}
                                        tooltip={null}
                                        typeCode={null}
                                        useCase="userGate/artifactDetail"
                                        uuIdentity={null}
                                      />
                                    }
                                  >
                                    <Card
                                      borderRadius={0}
                                      className="uup-bricks-contextbar uup-bricks-contextbar-padding"
                                      colorSchema="default"
                                      elevation={0}
                                      elevationHover={0}
                                      mainAttrs={Object {}}
                                    >
                                      <Section
                                        className="color-schema-default uu5-bricks-card uup-bricks-contextbar uup-bricks-contextbar-padding uu5-elevation-0 uu5-elevation-hover-0 uu5-bricks-card-spaces uu5-common-bg-style-filled uu5-bricks-card-default uu5-common-elevation-hover-0"
                                        mainAttrs={Object {}}
                                      >
                                        <Div
                                          className="uu5-bricks-section color-schema-default uu5-bricks-card uup-bricks-contextbar uup-bricks-contextbar-padding uu5-elevation-0 uu5-elevation-hover-0 uu5-bricks-card-spaces uu5-common-bg-style-filled uu5-bricks-card-default uu5-common-elevation-hover-0"
                                          footer={null}
                                          header={null}
                                          level={null}
                                          mainAttrs={Object {}}
                                        >
                                          <div
                                            className="uu5-common-div uu5-bricks-section color-schema-default uu5-bricks-card uup-bricks-contextbar uup-bricks-contextbar-padding uu5-elevation-0 uu5-elevation-hover-0 uu5-bricks-card-spaces uu5-common-bg-style-filled uu5-bricks-card-default uu5-common-elevation-hover-0"
                                            style={Object {}}
                                            title={null}
                                          >
                                            <ScreenSize
                                              key=".0"
                                            >
                                              <Lsi>
                                                <AlertBus
                                                  ref_={[Function]}
                                                >
                                                  <Alert
                                                    className="uu5-bricks-alert-bus"
                                                    hidden={true}
                                                    mainAttrs={Object {}}
                                                  >
                                                    <div
                                                      className="uu-bricks-9me4w6 uu5-bricks-alert uu5-bricks-alert-bus uu5-common-hidden uu5-bricks-alert-center uu5-bricks-alert-without-header"
                                                      style={
                                                        Object {
                                                          "MozTransitionDuration": "0.15s",
                                                          "MsTransitionDuration": "0.15s",
                                                          "OTransitionDuration": "0.15s",
                                                          "WebkitTransitionDuration": "0.15s",
                                                          "transitionDuration": "0.15s",
                                                        }
                                                      }
                                                      title={null}
                                                    />
                                                  </Alert>
                                                </AlertBus>
                                                <Div
                                                  className="uup-bricks-contextbar-header"
                                                >
                                                  <div
                                                    className="uu5-common-div uup-bricks-contextbar-header"
                                                    style={Object {}}
                                                    title={null}
                                                  >
                                                    <Div
                                                      className="uup-bricks-contextbar-header-own"
                                                      content={
                                                        <UuTerritory.Bricks.ArtifactLink
                                                          artifactCode=""
                                                          artifactData={null}
                                                          artifactId=""
                                                          artifactName=""
                                                          artifactStateIcon="uubml-state-s00-undefined"
                                                          artifactStateName=""
                                                          bgStyle={null}
                                                          borderRadius={null}
                                                          className={null}
                                                          colorSchema="primary"
                                                          contextMenuMap={null}
                                                          controlled={true}
                                                          disable={false}
                                                          disabled={false}
                                                          elevation={null}
                                                          hidden={false}
                                                          hideIcon={false}
                                                          hideStateIcon={false}
                                                          href=""
                                                          icon="uubml-uuawsc"
                                                          id={null}
                                                          leftBottomIcon={null}
                                                          mainAttrs={null}
                                                          mainUuIdentity={null}
                                                          mtMainBaseUri={null}
                                                          name={null}
                                                          nestingLevel={null}
                                                          onClick={null}
                                                          onCtrlClick={null}
                                                          openInNewTab={false}
                                                          params={Object {}}
                                                          parent={null}
                                                          ref_={null}
                                                          selected={false}
                                                          stateIconStyle="basic"
                                                          style={null}
                                                          territoryBaseUri={null}
                                                          tooltip={null}
                                                          typeCode={null}
                                                          useCase="userGate/artifactDetail"
                                                          uuIdentity={null}
                                                        />
                                                      }
                                                      key="uu5-content-0"
                                                    >
                                                      <div
                                                        className="uu5-common-div uup-bricks-contextbar-header-own"
                                                        style={Object {}}
                                                        title={null}
                                                      >
                                                        <UuTerritory.Bricks.ArtifactLink
                                                          artifactStateIcon="uubml-state-s00-undefined"
                                                          href=""
                                                          icon="uubml-uuawsc"
                                                          key="uu5-content-0"
                                                        >
                                                          <span
                                                            className="uuterritory-bricks-artifact-link-17nlvxt"
                                                            disabled={false}
                                                            hidden={false}
                                                          >
                                                            <Icon
                                                              className="uuterritory-bricks-artifact-link-144h85k"
                                                              icon="uubml-uuawsc"
                                                              style={
                                                                Object {
                                                                  "fontSize": 24,
                                                                }
                                                              }
                                                            >
                                                              <span
                                                                className="uu5-bricks-icon uuterritory-bricks-artifact-link-144h85k uubml uubml-uuawsc"
                                                                style={
                                                                  Object {
                                                                    "fontSize": 24,
                                                                  }
                                                                }
                                                                title={null}
                                                              />
                                                            </Icon>
                                                            <UuP.Bricks.State
                                                              className="uuterritory-bricks-artifact-link-d75red"
                                                              icon="uubml-state-s00-undefined"
                                                              size={18}
                                                              stateName=""
                                                            >
                                                              <Icon
                                                                className="uup-bricks-state-1k6vs66 uuterritory-bricks-artifact-link-d75red"
                                                                icon="uubml-symbol-state-s00"
                                                              >
                                                                <span
                                                                  className="uu5-bricks-icon uup-bricks-state-1k6vs66 uuterritory-bricks-artifact-link-d75red uubml uubml-symbol-state-s00"
                                                                  style={Object {}}
                                                                  title={null}
                                                                />
                                                              </Icon>
                                                            </UuP.Bricks.State>
                                                            <Link
                                                              className="uuterritory-bricks-artifact-link-11p8dr4"
                                                              colorSchema="primary"
                                                              content=""
                                                              href="http://localhost/userGate/artifactDetail?id="
                                                              mainAttrs={
                                                                Object {
                                                                  "onContextMenu": [Function],
                                                                }
                                                              }
                                                              onClick={[Function]}
                                                              onCtrlClick={[Function]}
                                                              ref_={[Function]}
                                                              tooltip=""
                                                            >
                                                              <a
                                                                className="color-schema-blue-rich color-schema-primary uu5-bricks-link uuterritory-bricks-artifact-link-11p8dr4"
                                                                download={false}
                                                                href="http://localhost/userGate/artifactDetail?id="
                                                                onClick={[Function]}
                                                                onContextMenu={[Function]}
                                                                style={Object {}}
                                                                target="_self"
                                                                title=""
                                                              />
                                                            </Link>
                                                            <ContextMenu
                                                              location="portal"
                                                              ref_={[Function]}
                                                            >
                                                              <forwardRef(Popover)
                                                                className="uu5-bricks-context-menu"
                                                                content={null}
                                                                controlled={true}
                                                                disabled={false}
                                                                dynamic={false}
                                                                footer={null}
                                                                forceRender={false}
                                                                header={null}
                                                                hidden={false}
                                                                ignoreInnerHTML={false}
                                                                level={null}
                                                                location="portal"
                                                                mainAttrs={Object {}}
                                                                name={null}
                                                                nestingLevel="bigBoxCollection"
                                                                parentElement={null}
                                                                pureRender={false}
                                                                ref_={[Function]}
                                                                selected={false}
                                                                shown={false}
                                                                style={null}
                                                                tooltip={null}
                                                              >
                                                                <Popover
                                                                  className="uu5-bricks-context-menu"
                                                                  location="portal"
                                                                  mainAttrs={Object {}}
                                                                  nestingLevel="bigBoxCollection"
                                                                  parentElement={null}
                                                                  ref_={[Function]}
                                                                />
                                                              </forwardRef(Popover)>
                                                            </ContextMenu>
                                                          </span>
                                                        </UuTerritory.Bricks.ArtifactLink>
                                                      </div>
                                                    </Div>
                                                    <Div
                                                      className="uup-bricks-contextbar-actions"
                                                      key="uu5-content-1"
                                                    >
                                                      <div
                                                        className="uu5-common-div uup-bricks-contextbar-actions"
                                                        style={Object {}}
                                                        title={null}
                                                      >
                                                        <Button
                                                          bgStyle="transparent"
                                                          content={
                                                            <Icon
                                                              authenticate={false}
                                                              className={null}
                                                              clickable={true}
                                                              controlled={true}
                                                              disabled={false}
                                                              hidden={false}
                                                              icon="mdi-chevron-down"
                                                              id={null}
                                                              mainAttrs={null}
                                                              name={null}
                                                              nestingLevel={null}
                                                              parent={null}
                                                              pureRender={false}
                                                              ref_={null}
                                                              selected={false}
                                                              src=""
                                                              style={null}
                                                              tooltip={null}
                                                            />
                                                          }
                                                          key="uu5-content-1"
                                                          onClick={[Function]}
                                                        >
                                                          <button
                                                            className="uu5-bricks-button uu-bricks-1py3saz uu5-bricks-button-m uu5-bricks-button-transparent uu-bricks-17iqcx5 uu-bricks-1wkp7jq"
                                                            onClick={[Function]}
                                                            style={Object {}}
                                                            title={null}
                                                            type="button"
                                                          >
                                                            <Icon
                                                              icon="mdi-chevron-down"
                                                              key="uu5-content-0"
                                                            >
                                                              <span
                                                                className="uu5-bricks-icon mdi mdi-chevron-down"
                                                                style={Object {}}
                                                                title={null}
                                                              />
                                                            </Icon>
                                                          </button>
                                                        </Button>
                                                      </div>
                                                    </Div>
                                                  </div>
                                                </Div>
                                              </Lsi>
                                            </ScreenSize>
                                          </div>
                                        </Div>
                                      </Section>
                                    </Card>
                                  </UuP.Bricks.ContextBar>
                                </UuJokesCore.Jokes.ContextBar>
                                <UuJokesCore.Joke.DetailView.Content
                                  jokeDataObject={
                                    Object {
                                      "data": Object {
                                        "averageRating": 2.5,
                                        "categoryIdList": Array [
                                          "1",
                                          "2",
                                        ],
                                        "id": "123",
                                        "image": "1234",
                                        "imageUrl": "https://via.placeholder.com/300x300",
                                        "name": "Test joke",
                                        "ratingCount": 5,
                                        "sys": Object {
                                          "cts": "2020-01-01T00:00:00.000Z",
                                        },
                                        "text": "Best joke ever",
                                        "visibility": false,
                                      },
                                      "state": "ready",
                                    }
                                  }
                                  jokesDataObject={
                                    Object {
                                      "data": Object {
                                        "categoryList": Array [
                                          Object {
                                            "id": "1",
                                            "name": "Category 1",
                                          },
                                          Object {
                                            "id": "2",
                                            "name": "Category 2",
                                          },
                                          Object {
                                            "id": "3",
                                            "name": "Category 3",
                                          },
                                        ],
                                      },
                                      "state": "ready",
                                    }
                                  }
                                  jokesPermission={
                                    Object {
                                      "joke": Object {
                                        "canAddRating": [Function],
                                        "canManage": [Function],
                                      },
                                    }
                                  }
                                  parentStyle={
                                    Object {
                                      "paddingBottom": 24,
                                      "paddingLeft": 24,
                                      "paddingRight": 24,
                                      "paddingTop": 24,
                                    }
                                  }
                                  preferenceDataObject={
                                    Object {
                                      "data": Object {
                                        "disableUserPreference": false,
                                        "showAuthor": true,
                                        "showCategories": true,
                                        "showCreationTime": true,
                                      },
                                      "state": "ready",
                                    }
                                  }
                                >
                                  <div
                                    className="uujokescore-joke-detailview-1cqsrz9"
                                  >
                                    <Uu5Elements.withTooltip(Uu5Elements.Text)
                                      category="interface"
                                      className="uujokescore-joke-detailview-nm0pv3"
                                      colorScheme="building"
                                      segment="content"
                                      type="medium"
                                    >
                                      <Uu5Elements.Text
                                        category="interface"
                                        className="uujokescore-joke-detailview-nm0pv3"
                                        colorScheme="building"
                                        segment="content"
                                        type="medium"
                                      >
                                        <span
                                          className="uuelements-1j0o3lg uuelements-15gmer uujokescore-joke-detailview-nm0pv3"
                                        >
                                          Best joke ever
                                        </span>
                                      </Uu5Elements.Text>
                                    </Uu5Elements.withTooltip(Uu5Elements.Text)>
                                    <img
                                      alt="Test joke"
                                      className="uujokescore-joke-detailview-fu2utz"
                                      src="https://via.placeholder.com/300x300"
                                    />
                                    <Uu5Elements.Line
                                      significance="subdued"
                                    >
                                      <hr
                                        className="uuelements-1r9e1ek uuelements-0 uuelements-1r0qsqw"
                                      />
                                    </Uu5Elements.Line>
                                    <InfoLine
                                      className="uujokescore-joke-detailview-h8yk6t"
                                    >
                                      <Uu5Elements.withTooltip(Uu5Elements.Text)
                                        category="interface"
                                        className="uujokescore-joke-detailview-h8yk6t"
                                        colorScheme="building"
                                        segment="content"
                                        significance="subdued"
                                        type="medium"
                                      >
                                        <Uu5Elements.Text
                                          category="interface"
                                          className="uujokescore-joke-detailview-h8yk6t"
                                          colorScheme="building"
                                          segment="content"
                                          significance="subdued"
                                          type="medium"
                                        >
                                          <span
                                            className="uuelements-1j0o3lg uuelements-15k0dco uujokescore-joke-detailview-h8yk6t"
                                          >
                                            Category 1, Category 2
                                          </span>
                                        </Uu5Elements.Text>
                                      </Uu5Elements.withTooltip(Uu5Elements.Text)>
                                    </InfoLine>
                                    <InfoLine
                                      className="uujokescore-joke-detailview-h8yk6t"
                                    >
                                      <Uu5Elements.withTooltip(Uu5Elements.Text)
                                        category="interface"
                                        className="uujokescore-joke-detailview-h8yk6t"
                                        colorScheme="building"
                                        segment="content"
                                        significance="subdued"
                                        type="medium"
                                      >
                                        <Uu5Elements.Text
                                          category="interface"
                                          className="uujokescore-joke-detailview-h8yk6t"
                                          colorScheme="building"
                                          segment="content"
                                          significance="subdued"
                                          type="medium"
                                        >
                                          <span
                                            className="uuelements-1j0o3lg uuelements-15k0dco uujokescore-joke-detailview-h8yk6t"
                                          >
                                            <Uu5Elements.DateTime
                                              dateFormat="short"
                                              timeFormat="none"
                                              value="2020-01-01T00:00:00.000Z"
                                            >
                                              01/01/2020
                                            </Uu5Elements.DateTime>
                                          </span>
                                        </Uu5Elements.Text>
                                      </Uu5Elements.withTooltip(Uu5Elements.Text)>
                                    </InfoLine>
                                    <InfoLine
                                      className="uujokescore-joke-detailview-h8yk6t"
                                    >
                                      <Uu5Elements.withTooltip(Uu5Elements.Text)
                                        category="interface"
                                        className="uujokescore-joke-detailview-h8yk6t"
                                        colorScheme="building"
                                        segment="content"
                                        significance="subdued"
                                        type="medium"
                                      >
                                        <Uu5Elements.Text
                                          category="interface"
                                          className="uujokescore-joke-detailview-h8yk6t"
                                          colorScheme="building"
                                          segment="content"
                                          significance="subdued"
                                          type="medium"
                                        >
                                          <span
                                            className="uuelements-1j0o3lg uuelements-15k0dco uujokescore-joke-detailview-h8yk6t"
                                          >
                                            5 votes
                                          </span>
                                        </Uu5Elements.Text>
                                      </Uu5Elements.withTooltip(Uu5Elements.Text)>
                                    </InfoLine>
                                    <Uu5Elements.Box
                                      className="uujokescore-joke-detailview-6w5je2"
                                      significance="distinct"
                                    >
                                      <Uu5g05.BackgroundProvider
                                        background="light"
                                      >
                                        <div
                                          className="uuelements-1sp5cr7 uujokescore-joke-detailview-6w5je2"
                                        >
                                          <span>
                                            <Plus4U5Elements.PersonItem>
                                              <Plus4U5Elements.PersonItemWithoutUuidentity>
                                                <Uu5Elements.withTooltip(Uu5Elements.InfoItem)
                                                  imageSrc="assets/anonymous.png"
                                                >
                                                  <Uu5Elements.InfoItem
                                                    imageSrc="assets/anonymous.png"
                                                  >
                                                    <Uu5Elements.withTooltip(Uu5Elements.TouchButton)
                                                      borderRadius="full"
                                                      imageSrc="assets/anonymous.png"
                                                      shape="interactiveElement"
                                                      size="m"
                                                    >
                                                      <Uu5Elements.TouchButton
                                                        borderRadius="full"
                                                        imageSrc="assets/anonymous.png"
                                                        shape="interactiveElement"
                                                        size="m"
                                                      >
                                                        <Uu5Elements.TouchButton
                                                          borderRadius={18}
                                                          className="uuelements-79elbk"
                                                          colorScheme="neutral"
                                                          height={36}
                                                          shape="interactiveElement"
                                                          significance="common"
                                                          src="assets/anonymous.png"
                                                        >
                                                          <span
                                                            className="uuelements-ej5z4n uuelements-1lo7ftd uuelements-79elbk"
                                                          />
                                                        </Uu5Elements.TouchButton>
                                                      </Uu5Elements.TouchButton>
                                                    </Uu5Elements.withTooltip(Uu5Elements.TouchButton)>
                                                  </Uu5Elements.InfoItem>
                                                </Uu5Elements.withTooltip(Uu5Elements.InfoItem)>
                                              </Plus4U5Elements.PersonItemWithoutUuidentity>
                                            </Plus4U5Elements.PersonItem>
                                          </span>
                                          <Rating
                                            onClick={[Function]}
                                            value={2.5}
                                          >
                                            <div
                                              className="uu5-bricks-rating uu5-bricks-rating-size-m uu5-bricks-rating-clickable"
                                              style={Object {}}
                                              title={null}
                                            >
                                              <RatingIcon
                                                key="5"
                                                onClick={[Function]}
                                              >
                                                <span
                                                  className="uu5-bricks-rating-icon"
                                                  onClick={[Function]}
                                                  style={Object {}}
                                                  title={null}
                                                >
                                                  <Icon
                                                    className="uu5-bricks-rating-icon-icon"
                                                    icon="mdi-star"
                                                  >
                                                    <span
                                                      className="uu5-bricks-icon uu5-bricks-rating-icon-icon mdi mdi-star"
                                                      style={Object {}}
                                                      title={null}
                                                    />
                                                  </Icon>
                                                </span>
                                              </RatingIcon>
                                              <RatingIcon
                                                key="4"
                                                onClick={[Function]}
                                              >
                                                <span
                                                  className="uu5-bricks-rating-icon"
                                                  onClick={[Function]}
                                                  style={Object {}}
                                                  title={null}
                                                >
                                                  <Icon
                                                    className="uu5-bricks-rating-icon-icon"
                                                    icon="mdi-star"
                                                  >
                                                    <span
                                                      className="uu5-bricks-icon uu5-bricks-rating-icon-icon mdi mdi-star"
                                                      style={Object {}}
                                                      title={null}
                                                    />
                                                  </Icon>
                                                </span>
                                              </RatingIcon>
                                              <RatingIcon
                                                key="3"
                                                onClick={[Function]}
                                                value={0.5}
                                              >
                                                <span
                                                  className="uu5-bricks-rating-icon"
                                                  onClick={[Function]}
                                                  style={Object {}}
                                                  title={null}
                                                >
                                                  <Icon
                                                    className="uu5-bricks-rating-icon-icon"
                                                    icon="mdi-star"
                                                    mainAttrs={
                                                      Object {
                                                        "className": "uu5-bricks-rating-icon-part-50",
                                                      }
                                                    }
                                                  >
                                                    <span
                                                      className="uu5-bricks-icon uu5-bricks-rating-icon-icon uu5-bricks-rating-icon-part-50 mdi mdi-star"
                                                      style={Object {}}
                                                      title={null}
                                                    />
                                                  </Icon>
                                                </span>
                                              </RatingIcon>
                                              <RatingIcon
                                                key="2"
                                                onClick={[Function]}
                                                value={1}
                                              >
                                                <span
                                                  className="uu5-bricks-rating-icon"
                                                  onClick={[Function]}
                                                  style={Object {}}
                                                  title={null}
                                                >
                                                  <Icon
                                                    className="uu5-bricks-rating-icon-icon"
                                                    icon="mdi-star"
                                                    mainAttrs={
                                                      Object {
                                                        "className": "uu5-bricks-rating-icon-full",
                                                      }
                                                    }
                                                  >
                                                    <span
                                                      className="uu5-bricks-icon uu5-bricks-rating-icon-icon uu5-bricks-rating-icon-full mdi mdi-star"
                                                      style={Object {}}
                                                      title={null}
                                                    />
                                                  </Icon>
                                                </span>
                                              </RatingIcon>
                                              <RatingIcon
                                                key="1"
                                                onClick={[Function]}
                                                value={1}
                                              >
                                                <span
                                                  className="uu5-bricks-rating-icon"
                                                  onClick={[Function]}
                                                  style={Object {}}
                                                  title={null}
                                                >
                                                  <Icon
                                                    className="uu5-bricks-rating-icon-icon"
                                                    icon="mdi-star"
                                                    mainAttrs={
                                                      Object {
                                                        "className": "uu5-bricks-rating-icon-full",
                                                      }
                                                    }
                                                  >
                                                    <span
                                                      className="uu5-bricks-icon uu5-bricks-rating-icon-icon uu5-bricks-rating-icon-full mdi mdi-star"
                                                      style={Object {}}
                                                      title={null}
                                                    />
                                                  </Icon>
                                                </span>
                                              </RatingIcon>
                                            </div>
                                          </Rating>
                                        </div>
                                      </Uu5g05.BackgroundProvider>
                                    </Uu5Elements.Box>
                                  </div>
                                </UuJokesCore.Joke.DetailView.Content>
                              </UuJokesCore.Core.DataObjectStateResolver>
                            </UuJokesCore.Core.DataObjectStateResolver>
                          </UuJokesCore.Core.DataObjectStateResolver>
                        </div>
                      </Content>
                    </div>
                  </Uu5Elements.CollapsibleBox>
                </Uu5Elements.Body>
              </div>
            </Uu5g05.BackgroundProvider>
          </Uu5Elements.Box>
        </Uu5Elements.BlockView>
      </Uu5Elements.TitleBlock>
    </Uu5Elements.Block>
  </Plus4U5Elements.IdentificationBlock>
</UuJokesCore.Joke.DetailView.AreaView>
`;

exports[`UuJokesCore.Joke.DetailView.AreaView preferences not loaded 1`] = `
<UuJokesCore.Joke.DetailView.AreaView
  awscDataObject={
    Object {
      "data": Object {
        "data": Object {
          "artifact": Object {
            "uuAppWorkspaceUri": "",
          },
        },
      },
      "state": "ready",
    }
  }
  jokeDataObject={
    Object {
      "data": Object {
        "averageRating": 2.5,
        "categoryIdList": Array [
          "1",
          "2",
        ],
        "id": "123",
        "image": "1234",
        "imageUrl": "https://via.placeholder.com/300x300",
        "name": "Test joke",
        "ratingCount": 5,
        "sys": Object {
          "cts": "2020-01-01T00:00:00.000Z",
        },
        "text": "Best joke ever",
        "visibility": false,
      },
      "state": "ready",
    }
  }
  jokesDataObject={
    Object {
      "data": Object {
        "categoryList": Array [
          Object {
            "id": "1",
            "name": "Category 1",
          },
          Object {
            "id": "2",
            "name": "Category 2",
          },
          Object {
            "id": "3",
            "name": "Category 3",
          },
        ],
      },
      "state": "ready",
    }
  }
  jokesPermission={
    Object {
      "joke": Object {
        "canAddRating": [Function],
        "canManage": [Function],
      },
    }
  }
  preferenceDataObject={
    Object {
      "data": null,
      "handlerMap": Object {
        "load": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "throw",
              "value": [Error: Test error :-)],
            },
          ],
        },
      },
      "state": "readyNoData",
    }
  }
>
  <Plus4U5Elements.IdentificationBlock
    actionList={Array []}
    header={
      <UuJokesCore.Joke.DetailView.Header
        hideTypeName={false}
        joke={
          Object {
            "averageRating": 2.5,
            "categoryIdList": Array [
              "1",
              "2",
            ],
            "id": "123",
            "image": "1234",
            "imageUrl": "https://via.placeholder.com/300x300",
            "name": "Test joke",
            "ratingCount": 5,
            "sys": Object {
              "cts": "2020-01-01T00:00:00.000Z",
            },
            "text": "Best joke ever",
            "visibility": false,
          }
        }
      />
    }
    headerSeparator={true}
  >
    <Uu5Elements.Block
      actionList={Array []}
      card="full"
      collapsible={false}
      header={
        <React.Fragment>
          <Plus4U5Elements.IdentificationIcon
            className="plusuelements-12z0wuy"
            size="xxs"
          />
          <UuJokesCore.Joke.DetailView.Header
            hideTypeName={false}
            joke={
              Object {
                "averageRating": 2.5,
                "categoryIdList": Array [
                  "1",
                  "2",
                ],
                "id": "123",
                "image": "1234",
                "imageUrl": "https://via.placeholder.com/300x300",
                "name": "Test joke",
                "ratingCount": 5,
                "sys": Object {
                  "cts": "2020-01-01T00:00:00.000Z",
                },
                "text": "Best joke ever",
                "visibility": false,
              }
            }
          />
        </React.Fragment>
      }
      headerSeparator={true}
      headerType="title"
    >
      <Uu5Elements.TitleBlock
        actionList={Array []}
        card="full"
        collapsible={false}
        header={
          <React.Fragment>
            <Plus4U5Elements.IdentificationIcon
              className="plusuelements-12z0wuy"
              size="xxs"
            />
            <UuJokesCore.Joke.DetailView.Header
              hideTypeName={false}
              joke={
                Object {
                  "averageRating": 2.5,
                  "categoryIdList": Array [
                    "1",
                    "2",
                  ],
                  "id": "123",
                  "image": "1234",
                  "imageUrl": "https://via.placeholder.com/300x300",
                  "name": "Test joke",
                  "ratingCount": 5,
                  "sys": Object {
                    "cts": "2020-01-01T00:00:00.000Z",
                  },
                  "text": "Best joke ever",
                  "visibility": false,
                }
              }
            />
          </React.Fragment>
        }
        headerSeparator={true}
      >
        <Uu5Elements.BlockView
          actionList={Array []}
          card="full"
          header={
            <Uu5Elements.withTooltip(Uu5Elements.Text)
              category="interface"
              segment="title"
              significance="common"
              type="common"
            >
              <React.Fragment>
                <Plus4U5Elements.IdentificationIcon
                  className="plusuelements-12z0wuy"
                  size="xxs"
                />
                <UuJokesCore.Joke.DetailView.Header
                  hideTypeName={false}
                  joke={
                    Object {
                      "averageRating": 2.5,
                      "categoryIdList": Array [
                        "1",
                        "2",
                      ],
                      "id": "123",
                      "image": "1234",
                      "imageUrl": "https://via.placeholder.com/300x300",
                      "name": "Test joke",
                      "ratingCount": 5,
                      "sys": Object {
                        "cts": "2020-01-01T00:00:00.000Z",
                      },
                      "text": "Best joke ever",
                      "visibility": false,
                    }
                  }
                />
              </React.Fragment>
            </Uu5Elements.withTooltip(Uu5Elements.Text)>
          }
          headerSeparator={true}
        >
          <Uu5Elements.Box
            borderRadius="moderate"
          >
            <Uu5g05.BackgroundProvider
              background="light"
            >
              <div
                className="uuelements-10i8t5n"
              >
                <Uu5Elements.Header
                  actionList={Array []}
                  separator={true}
                >
                  <Uu5Elements.Bar
                    actionList={Array []}
                    className="uuelements-bdxw0n"
                    paddingHorizontal={true}
                    paddingVertical={true}
                    separator={true}
                  >
                    <div
                      className="uuelements-bdxw0n"
                    >
                      <Uu5Elements.withTooltip(Uu5Elements.Text)
                        category="interface"
                        segment="title"
                        type="common"
                      >
                        <Uu5Elements.Text
                          category="interface"
                          segment="title"
                          type="common"
                        >
                          <span
                            className="uuelements-1prlaii uuelements-0"
                          >
                            <Plus4U5Elements.IdentificationIcon
                              className="plusuelements-12z0wuy"
                              size="xxs"
                            />
                            <UuJokesCore.Joke.DetailView.Header
                              joke={
                                Object {
                                  "averageRating": 2.5,
                                  "categoryIdList": Array [
                                    "1",
                                    "2",
                                  ],
                                  "id": "123",
                                  "image": "1234",
                                  "imageUrl": "https://via.placeholder.com/300x300",
                                  "name": "Test joke",
                                  "ratingCount": 5,
                                  "sys": Object {
                                    "cts": "2020-01-01T00:00:00.000Z",
                                  },
                                  "text": "Best joke ever",
                                  "visibility": false,
                                }
                              }
                            >
                              <Uu5Elements.withTooltip(Uu5Elements.Text)>
                                <Uu5Elements.Text>
                                  <span
                                    className="uuelements-0 uuelements-0"
                                  >
                                    <Uu5Elements.withTooltip(Uu5Elements.Text)
                                      colorScheme="building"
                                      significance="subdued"
                                    >
                                      <Uu5Elements.Text
                                        colorScheme="building"
                                        significance="subdued"
                                      >
                                        <span
                                          className="uuelements-0 uuelements-15k0dco"
                                        >
                                          <Uu5Elements.withTooltip(Uu5Elements.Icon)
                                            className="uujokescore-joke-detailview-12z0wuy"
                                            icon="mdi-eye-off"
                                          >
                                            <Uu5Elements.Icon
                                              className="uujokescore-joke-detailview-12z0wuy"
                                              icon="mdi-eye-off"
                                            >
                                              <span
                                                className="uuelements-4g9xqe mdi mdi-eye-off uujokescore-joke-detailview-12z0wuy"
                                              />
                                            </Uu5Elements.Icon>
                                          </Uu5Elements.withTooltip(Uu5Elements.Icon)>
                                        </span>
                                      </Uu5Elements.Text>
                                    </Uu5Elements.withTooltip(Uu5Elements.Text)>
                                    Joke
                                     - 
                                    Test joke
                                  </span>
                                </Uu5Elements.Text>
                              </Uu5Elements.withTooltip(Uu5Elements.Text)>
                            </UuJokesCore.Joke.DetailView.Header>
                          </span>
                        </Uu5Elements.Text>
                      </Uu5Elements.withTooltip(Uu5Elements.Text)>
                    </div>
                  </Uu5Elements.Bar>
                </Uu5Elements.Header>
                <Uu5Elements.Body
                  className="uuelements-1cqsrz9"
                  contentClassName="uuelements-1bwdv7e"
                  displayInfo={false}
                  footerSeparator={false}
                  paddingHorizontal={true}
                  paddingTop={true}
                  scrollIndicator={
                    Object {
                      "bottom": "disappear",
                      "top": "gradient",
                    }
                  }
                >
                  <Uu5Elements.CollapsibleBox
                    className="uuelements-1cqsrz9"
                    disabled={false}
                  >
                    <div
                      className="uuelements-7s9z5s uuelements-1cqsrz9"
                      disabled={false}
                      style={Object {}}
                    >
                      <Content
                        className="uuelements-1lytpdc uuelements-1bwdv7e"
                        scrollIndicator={
                          Object {
                            "bottom": "disappear",
                            "top": "gradient",
                          }
                        }
                        scrollable={true}
                      >
                        <div
                          className="uuelements-1lytpdc uuelements-1bwdv7e uuelements-0"
                        >
                          <UuJokesCore.Core.DataObjectStateResolver
                            dataObject={
                              Object {
                                "data": Object {
                                  "categoryList": Array [
                                    Object {
                                      "id": "1",
                                      "name": "Category 1",
                                    },
                                    Object {
                                      "id": "2",
                                      "name": "Category 2",
                                    },
                                    Object {
                                      "id": "3",
                                      "name": "Category 3",
                                    },
                                  ],
                                },
                                "state": "ready",
                              }
                            }
                            height="500px"
                          >
                            <UuJokesCore.Core.DataObjectStateResolver
                              customErrorLsi={
                                Object {
                                  "uu-jokes-main/joke/addRating/userNotAuthorized": "The author is not allowed to rate own jokes",
                                  "uu-jokes-main/joke/create/invalidImage": "The image file is not valid or supported image type",
                                  "uu-jokes-main/joke/get/jokeDoesNotExist": "The joke does not exist",
                                  "uu-jokes-main/joke/update/invalidImage": "The image file is not valid or supported image type",
                                  "uujokescore-joke-provider/no-oid": "The oid property is missing",
                                }
                              }
                              dataObject={
                                Object {
                                  "data": Object {
                                    "averageRating": 2.5,
                                    "categoryIdList": Array [
                                      "1",
                                      "2",
                                    ],
                                    "id": "123",
                                    "image": "1234",
                                    "imageUrl": "https://via.placeholder.com/300x300",
                                    "name": "Test joke",
                                    "ratingCount": 5,
                                    "sys": Object {
                                      "cts": "2020-01-01T00:00:00.000Z",
                                    },
                                    "text": "Best joke ever",
                                    "visibility": false,
                                  },
                                  "state": "ready",
                                }
                              }
                              height="500px"
                            >
                              <UuJokesCore.Core.DataObjectStateResolver
                                customErrorLsi={
                                  Object {
                                    "uu-jokes-main/joke/addRating/userNotAuthorized": "The author is not allowed to rate own jokes",
                                    "uu-jokes-main/joke/create/invalidImage": "The image file is not valid or supported image type",
                                    "uu-jokes-main/joke/get/jokeDoesNotExist": "The joke does not exist",
                                    "uu-jokes-main/joke/update/invalidImage": "The image file is not valid or supported image type",
                                    "uujokescore-joke-provider/no-oid": "The oid property is missing",
                                  }
                                }
                                dataObject={
                                  Object {
                                    "data": null,
                                    "handlerMap": Object {
                                      "load": [MockFunction] {
                                        "calls": Array [
                                          Array [],
                                        ],
                                        "results": Array [
                                          Object {
                                            "type": "throw",
                                            "value": [Error: Test error :-)],
                                          },
                                        ],
                                      },
                                    },
                                    "state": "readyNoData",
                                  }
                                }
                                height="500px"
                              >
                                <UuJokesCore.Core.DataObjectStateResolver.DataObjectPending
                                  height="500px"
                                >
                                  <div
                                    className="uujokescore-core-dataobjectstateresolver-1lmpr7 uujokescore-core-dataobjectstateresolver-1lmpr7"
                                  >
                                    <Uu5Elements.Pending
                                      className="uujokescore-core-dataobjectstateresolver-1ni8fbp"
                                      size="xl"
                                    >
                                      <span
                                        aria-busy={true}
                                        className="uujokescore-core-dataobjectstateresolver-1ni8fbp"
                                        role="alert"
                                      >
                                        <svg
                                          className="uuelements-rp3aq4"
                                          version="1.1"
                                          viewBox="0 0 24 24"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <defs>
                                            <linearGradient
                                              id="aabbcc0"
                                              x1="50%"
                                              x2="50%"
                                              y2="100%"
                                            >
                                              <stop
                                                offset="0"
                                                stopColor="currentColor"
                                              />
                                              <stop
                                                offset="1"
                                                stopColor="currentColor"
                                                stopOpacity=".3"
                                              />
                                            </linearGradient>
                                          </defs>
                                          <circle
                                            cx="12"
                                            cy="12"
                                            fill="none"
                                            r={9}
                                            stroke="url(#aabbcc0)"
                                            strokeWidth={2}
                                          />
                                        </svg>
                                      </span>
                                    </Uu5Elements.Pending>
                                  </div>
                                </UuJokesCore.Core.DataObjectStateResolver.DataObjectPending>
                              </UuJokesCore.Core.DataObjectStateResolver>
                            </UuJokesCore.Core.DataObjectStateResolver>
                          </UuJokesCore.Core.DataObjectStateResolver>
                        </div>
                      </Content>
                    </div>
                  </Uu5Elements.CollapsibleBox>
                </Uu5Elements.Body>
              </div>
            </Uu5g05.BackgroundProvider>
          </Uu5Elements.Box>
        </Uu5Elements.BlockView>
      </Uu5Elements.TitleBlock>
    </Uu5Elements.Block>
  </Plus4U5Elements.IdentificationBlock>
</UuJokesCore.Joke.DetailView.AreaView>
`;
